--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1{
     color: white;
     font-size: 60px;
     font-weight: 1000;
-    text-transform: capitalize;
+    text-transform: uppercase;
     text-shadow: 5px 5px 7px rgb(18, 223, 31);
     
 }
