--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .nav-main{
     height: 740px;
     width: 1490px;
-    background-color:white;
+    background-color:rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
